public/existaya/css/main.css
/* ... */
.nav-perfil > li > a:hover,.nav-perfil > li > a:active,.nav-perfil > li > a:focus{background:none;border:none}
.nav-perfil > li.active > a{background:none;border:none;border-bottom:3px solid #6e8e2d;color:#002b62;font-weight:700;outline:none;}
.nav-perfil > li.active > a:hover,.nav-perfil > li.active > a:active,.nav-perfil > li.active > a:focus{background:none !important;border:none;border-bottom:3px solid #6e8e2d !important;color:#002b62 !important}
.certification{
    padding: 0 !important;
}
.certification>a.active{

    background: #3874b8;
    color: white;
}
.avatar_navbar{
    width: 3em !important;
}
.nav-tabs--detalleClase.nav-justified > li.active > a > span {
    color: #6e8e2d;
}
.nav-tabs--detalleClase.nav-justified > li > a > span {
    color: #929292;
    font-size: 2em;
    font-weight: 700;
    position: absolute;
    left: 0.5em;
    top: 0.25em;
    line-height: 1em;
}
.nav-pills--setps > li > a, .nav-pills--setps > li.active > a, .nav-pills--setps > li > a:active, .nav-pills--setps > li > a:focus, .nav-pills--setps > li > a:hover {
    background: #ececec;
    border-radius: 0;
    color: #7e7e7e;
    display: block;
    height: 2em;
    padding: .25em .5em;
}

.nav-pills--setps > li.visited > a, .nav-pills--setps > li.visited > a:active, .nav-pills--setps > li.visited > a:focus, .nav-pills--setps > li.visited > a:hover {
    color: white;
}

